--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,4 +1,4 @@
-<app-toolbar class="menubar">
+<app-toolbar id="mymenu" class="menubar">
     <a href="${app}/index.html" class="logo" data-template="pages:parse-params"/>
     <pb-media-query query="min-width: 1024px">
         <a href="${app}/index.html" data-template="pages:parse-params">Start</a>
