--- a/templates/toolbar.html
+++ b/templates/toolbar.html
@@ -22,6 +22,19 @@
         <a id="timelineButton" data-i18n="[title]myapp.menu.showTimeline" data-template="pages:timeline-link">
             <paper-icon-button id="showTimeline" class="mynav" icon="icons:history"/>
         </a>
+        <a id="transcriptionButton" data-i18n="[title]myapp.menu.showTranscription" data-source="version.html" data-link="surface.html" data-template="pages:toggle-link">
+            <paper-icon-button id="showTimeline" class="mynav" icon="editor:title"/>
+        </a>
+        <a id="transcriptionButton" data-i18n="[title]myapp.menu.showTranscription" data-source="show-facsimile.html" data-link="surface.html&amp;show=facsimile" data-template="pages:toggle-link">
+            <paper-icon-button id="showTimeline" class="mynav" icon="editor:title"/>
+        </a>
+         <a id="facsimileButton" data-i18n="[title]myapp.menu.showTranscription" data-source="version.html surface.html" data-link="show-facsimile.html" data-template="pages:toggle-link">
+            <paper-icon-button id="showTimeline" class="mynav" icon="image:collections"/>
+        </a>
+         <a id="versionButton" data-i18n="[title]myapp.menu.showTranscription" data-source="show-facsimile.html" data-link="version.html" data-template="pages:toggle-link">
+            <paper-icon-button id="showTimeline" class="mynav" icon="icons:track-changes"/>
+        </a>
+        <paper-icon-button id="toggleFullscreen" class="mynav" icon="icons:fullscreen-exit" data-alt-icon="icons:fullscreen" data-i18n="[title]myapp.menu.toggleInfo" data-target="#mymenu"/>
     </span>
     <pb-navigation emit="transcription" keyboard="left" subscribe="transcription" direction="backward" unit="page">
         <paper-icon-button icon="icons:chevron-left"/>
