--- a/resources/odd/nietzsche-ed.css
+++ b/resources/odd/nietzsche-ed.css
@@ -22,6 +22,12 @@ ul.letters, ul.pages {
             color: grey;
             float: right;
 }
+.tei-hi2.spaced {
+    letter-spacing: 0.2rem;
+}
+.tei-hi2.bold {
+    font-weight: bold;
+}
 .head {
     text-align: center;
 }
@@ -53,7 +59,7 @@ ul.letters, ul.pages {
     text-decoration: var(-paper-red-200) wavy underline;
 }
 .indent {
-    margin-right: 0.5em;
+    margin-right: 3em;
 }
 .note {
     font-style: italic;
