--- a/templates/pages/surface.html
+++ b/templates/pages/surface.html
@@ -125,18 +125,7 @@
                          <pb-load id="toc" url="api/document/{doc}/contents?target=transcription&amp;icons=true" expand="expand" src="document1" subscribe="toc" load-once="load-once">
                                 <pb-i18n key="dialogs.loading">Loading</pb-i18n>
                             </pb-load> 
-                           <!-- <pb-panel emit="transcription">
-                                <template title="Test 1">
-                               <pb-load id="toc" url="api/document/{doc}/contents?target=transcription&amp;icons=true" expand="expand" src="document1" subscribe="toc" auto="auto">
-                                <pb-i18n key="dialogs.loading">Loading</pb-i18n>
-                            </pb-load>
-                            </template>
-                            <template title="Test 2">
-                                <pb-load id="toc2" url="api/document/{doc}/contents?target=transcription&amp;icons=true" expand="expand" src="document1" subscribe="toc" auto="auto">
-                                <pb-i18n key="dialogs.loading">Loading</pb-i18n>
-                            </pb-load>
-                            </template>
-                        </pb-panel> -->
+                           
                     </div>
                 </pb-drawer>
                 <section class="breadcrumbs">
@@ -161,6 +150,11 @@
                                 </pb-view>
                                 <pb-view src="document1" column-separator=".tei-cb" map="nietzsche-qv-head" subscribe="transcription" emit="pageInfo">
                                     <pb-param name="mode" value="querverweis"/>
+                                    <pb-param name="type" value="genesis"/>
+                                </pb-view>
+                                 <pb-view src="document1" column-separator=".tei-cb" map="nietzsche-qv-head" subscribe="transcription" emit="pageInfo">
+                                    <pb-param name="mode" value="querverweis"/>
+                                    <pb-param name="type" value="concordance"/>
                                 </pb-view>
                         </div>
                     </div>
