--- a/templates/pages/ed.html
+++ b/templates/pages/ed.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="resources/css/theme.css"/>
     <link rel="stylesheet" href="resources/css/mystyle.css"/>
     <script src="resources/scripts/myfunctions.js"/>
+    <script src="resources/scripts/fix-ed-nav.js"/>
     <script type="module" src="pb-components-bundle.js" data-template="pages:load-components"/>
     <style>
         
@@ -97,7 +98,7 @@
                         <h3>
                             <pb-i18n key="document.contents">Contents</pb-i18n>
                         </h3>
-                        <pb-load id="toc" url="api/document/{doc}/contents?target=transcription&amp;icons=true" expand="expand" src="document1" subscribe="toc" load-once="load-once">
+                        <pb-load id="toc" url="api/document/{doc}/contents?view=edPage&amp;target=transcription&amp;icons=true" expand="expand" src="document1" subscribe="toc" load-once="load-once">
                                 <pb-i18n key="dialogs.loading">Loading</pb-i18n>
                             </pb-load>
                     </div>
