--- a/templates/pages/nietzsche-timeline.html
+++ b/templates/pages/nietzsche-timeline.html
@@ -73,7 +73,7 @@
                             </h3>
                             <pb-load id="toc" url="api/document/{doc}/contents?target=transcription&amp;icons=true" expand="expand" src="document1" subscribe="toc" load-once="load-once">
                                 <pb-i18n key="dialogs.loading">Loading</pb-i18n>
-                            </pb-load>
+                            </pb-load>jj
                         </div>
                     </pb-drawer>
                    <!-- <section class="breadcrumbs">
