working on @CS3 ...

--- a/resources/css/theme.css
+++ b/resources/css/theme.css
@@ -2,7 +2,9 @@
 .myhighlight {
     background: var(--pb-toolbar-background-color);
 }
-
+a {
+    color: inherit;
+}
 ul.letters, ul.pages {
     color: grey;
     font-size: 80%;
