--- a/resources/odd/nietzsche-ed.css
+++ b/resources/odd/nietzsche-ed.css
@@ -3,6 +3,22 @@
     margin-right: 1em;
     margin-left: 1em;
 }
+a {
+    color: inherit;
+}
+.line, .xLine {
+    position:absolute; 
+    left: -3em; 
+    color: black;
+    font-style: italic;
+}
+.line {
+    font-size: 80%;
+    margin-top: 0.25em;
+}
+.tei-p3 {
+    line-height: 1.15em;
+}
 ul.letters, ul.pages {
     color: grey;
     font-size: 80%;
