--- a/templates/pages/meta.html
+++ b/templates/pages/meta.html
@@ -80,16 +80,16 @@
 
                     <pb-drawer toggle="tocToggle" class="toc" emit="toc" subscribe="transcription">
                         <div class="drawer-content">
-                           <!-- <h3>
-                                <pb-i18n key="document.contents">Contents</pb-i18n>
+                           <h3>
+                                <pb-i18n key="myapp.meta.title">Metadaten</pb-i18n>
                             </h3>
                             <pb-load id="toc" url="api/metatoc/{doc}/contents?target=transcription&amp;icons=true" expand="expand" src="document1" subscribe="toc" load-once="load-once">
                                 <pb-i18n key="dialogs.loading">Loading</pb-i18n>
-                            </pb-load> -->
+                            </pb-load>  <!--
                             <pb-view id="view1" no-scroll="no-scroll" src="document1" xpath="//teiHeader" column-separator=".tei-cb" view="single" subscribe="transcription" emit="transcription">
                             <pb-param name="mode" value="meta"/>
                             <pb-param name="header" value="toc"/>
-                        </pb-view>
+                        </pb-view> -->
                         </div>
                     </pb-drawer>
                     <section class="breadcrumbs">
