--- a/templates/toolbar.html
+++ b/templates/toolbar.html
@@ -34,7 +34,7 @@
          <a id="versionButton" data-i18n="[title]myapp.menu.showTranscription" data-source="show-facsimile.html" data-link="version.html" data-template="pages:toggle-link">
             <paper-icon-button id="showTimeline" class="mynav" icon="icons:track-changes"/>
         </a>
-        <paper-icon-button id="toggleFullscreen" class="mynav" icon="icons:fullscreen-exit" data-alt-icon="icons:fullscreen" data-i18n="[title]myapp.menu.toggleInfo" data-target="#mymenu"/>
+        <!-- <paper-icon-button id="toggleFullscreen" class="mynav" icon="icons:fullscreen-exit" data-alt-icon="icons:fullscreen" data-i18n="[title]myapp.menu.toggleInfo" data-target="#mymenu"/> -->
     </span>
     <pb-navigation emit="transcription" keyboard="left" subscribe="transcription" direction="backward" unit="page">
         <paper-icon-button icon="icons:chevron-left"/>
