--- a/templates/pages/surface.html
+++ b/templates/pages/surface.html
@@ -39,7 +39,6 @@
             --pb-facsimile-height: calc(var(--pb-view-height) - 22px);
          --highlight: yellow;
          --delHighlight: gray;
-         --pb-content-font-family: MyFont;
          --pb-content-font-size: 16px;
          --radius: 1em 1em;
          --red-marking: red;
@@ -56,6 +55,8 @@
         --blue: var(--nblue, blue);
         --tpField: #f8f8f8;
         --tpFieldMy: #e0e6e2fa;
+        --tpFont: MyFont;
+        --editorFont: var(--pb-content-font-family)
         }
        #edView {
            margin: auto;
