fix for Cb concordance

--- a/resources/odd/surface.css
+++ b/resources/odd/surface.css
@@ -266,6 +266,16 @@ span.mytransparent { color: var(--tpField, white);}
          transition: color 1s;
          
      }
+     .before, .after {
+        position: absolute;
+        width: max-content;
+    }
+    .after {
+        left: 1em;
+    }
+    .before {
+        left: -1em;
+    }
     .above.instantaneous, .below.instantaneous, .inline.instantaneous {
        font-size: 100%; 
     }
@@ -288,6 +298,9 @@ span.mytransparent { color: var(--tpField, white);}
       }
      .centerLeft {
          transform: translateX(-30%);
+     }
+     .insertion-before, .insertion-after {
+         position: relative; left: 0em;
      }
      .insert-mark-above, .insert-mark-below { position: relative;padding-left: 2px; padding-right: 2px; height: 100%; }
      .afterWordinsertion-below, .beforePunctuationinsertion-below, .inWordinsertion-below, .inSpatiuminsertion-below,.insMinsertion-below, .Ezinsertion-below, .insertion-below  { 
